--- a/src/main/resources/templates/views/adm/usr/ADMUSR002M0.html
+++ b/src/main/resources/templates/views/adm/usr/ADMUSR002M0.html
@@ -91,8 +91,8 @@
 						   id          : "insertList"
 					     , type        : "post"
 						 , url         : "/ADMUSR002M0UpdateList"
-						 , async       : false
-						 , dataType    : "text"
+						 , async       : true
+						 , dataType    : "json"
 						 , contentType : "application/json; charset=utf-8"
 						 , data        : addedRow
 			             };
@@ -107,7 +107,7 @@
 					     , type        : "post"
 						 , url         : "/ADMUSR002M0UpdateList"
 						 , async       : true
-						 , dataType    : "text"
+						 , dataType    : "json"
 						 , contentType : "application/json; charset=utf-8"
 						 , data        : input
 			             };
@@ -252,13 +252,21 @@
 							
 						break;
 						case "insertList":
-							
-							main();
+							//console.log("fn_callback result received:", result);
+							if ( result.data.resultCode == "200" ) {
+								main();
+							} else {
+								alert( "Save Fail Error : " + result.data.resultMessage );
+							}
 							
 						break;
 						case "updateList":
-							
-							main();
+							//console.log("fn_callback result received:", result);
+							if ( result.data.resultCode == "200" ) {
+								main();
+							} else {
+								alert( "Save Fail Error : " + result.data.resultMessage );
+							}
 							
 						break;
 					}
