--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
   <th:block th:replace="fragments/head :: headFragment"></th:block>
-  <body class="bg-white" oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
+  <body class="bg-white" id="bg-white" oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
     <div class="page">
       <script>
         function goMenuPage(pageName) {
