--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -30,8 +30,13 @@
 				<span class="link-light">works at</span>&nbsp;&nbsp;
 				<span class="badge rounded-pill badge-outline text-white"><b>[[${loginDTO.compNm}]]</b></span>&nbsp;&nbsp;
 				<th:block th:if="${loginDTO.csNo != '999'}">
+					<th:block th:if="${loginDTO.srvcNm == '' || loginDTO.srvcNm == null }">
+						<span class="link-light"><b>Unfortunately, however, you have not selected any service option yet.</b></span>
+					</th:block>
+					<th:block th:unless="${loginDTO.srvcNm == '' || loginDTO.srvcNm == null }">
 					<span class="link-light">currently subscribing to</span>&nbsp;&nbsp;
-					<span class="badge rounded-pill badge-outline text-white"><b>[[${loginDTO.srvcNm}]]</b></span>
+						<span class="badge rounded-pill badge-outline text-white"><b>[[${loginDTO.srvcNm}]]</b></span>
+					</th:block>
 				</th:block>
 			</div>
 		</div>
