error handler change

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -120,7 +120,7 @@
 						$("#form").submit();
 					},
 					error: function (xhr, status, error) {
-						errorHandler(xhr);
+						gf_errorHandler(xhr);
 					},
 				});
 			}
