--- a/src/main/resources/templates/adminLogin.html
+++ b/src/main/resources/templates/adminLogin.html
@@ -155,7 +155,7 @@
 						}
 					},
 					error: function (xhr, status, error) {
-						errorHandler(xhr);
+						gf_errorHandler(xhr);
 					},
 				});
 			}
